# Paleontology-Wiki

./: README.md  compose.yml  conftest.py  env_example  package-lock.json  pytest.ini  start-with-new-db.sh
backend/: .gitignore  README.md  app.py  article.py  cache.py  docker-entrypoint.sh  lucene_query_transformers.py  map.py  requirements.txt  search.py  timeline.py
backend/cladogram/: README.md  cladogram.py  update_classification.py
batchpipe/: .gitignore  README.md  pyproject.toml
batchpipe/src/batchpipe/: __init__.py  init.py  vis.py  wikitools.py
batchpipe/src/batchpipe/tasks/: __init__.py  gds.py  pipeline.py  populate_db.py  relationships.py  search_indexing.py
docs/: dev-environment.md
frontend/: .gitignore  Dockerfile  docker-entrypoint.sh  next.config.js  package-lock.json  package.json
frontend/public/3d/: spinosaurus-jwe.glb
frontend/src/: global.css
frontend/src/app/: layout.tsx  not-found.tsx  page.tsx
frontend/src/search/: types.tsx
frontend/src/store/: ThemeContextProvider.js  TreeContextProvider.js  TreeFontContextProvider.js  accessibility-slice.js
infra/: README.md  backup-batchpipe-db.sh  backup-db.sh  bashrc_backup  logging.cfg  luigi.cfg  run-luigid.sh  run-pipeline.sh  start-tmux.sh
tests/backend/timeline/: raw_request.txt  test_allows_cross_origin_request.py  test_fix_missing.py  test_format_data.py  test_get_entries_in_time_period.py  test_get_identifier_data.py  test_get_start_time_diff_for_entry.py  test_get_wikipedia_rank.py  test_ranking.py  test_split_time_range.py  test_validate_request_identifier.py  (+1 more)
(+172 files in other folders)
